{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 59,
  "lineage": "a50fef5b-65e9-9d13-001d-389d091f3180",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_firewall_nat_rule_collection",
      "name": "fe-rg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": "Dnat",
            "azure_firewall_name": "fw-01",
            "id": "/subscriptions/6c903494-a6a9-4bb5-80ad-a6b1816c67b3/resourceGroups/fe-rg/providers/Microsoft.Network/azureFirewalls/fw-01/natRuleCollections/nat01",
            "name": "nat01",
            "priority": 100,
            "resource_group_name": "fe-rg",
            "rule": [
              {
                "description": "",
                "destination_addresses": [
                  "51.136.122.114"
                ],
                "destination_ports": [
                  "3389"
                ],
                "name": "jbox-rule",
                "protocols": [
                  "TCP"
                ],
                "source_addresses": [
                  "*"
                ],
                "translated_address": "10.0.1.4",
                "translated_port": "3389"
              },
              {
                "description": "",
                "destination_addresses": [
                  "51.136.122.114"
                ],
                "destination_ports": [
                  "80"
                ],
                "name": "web-rule",
                "protocols": [
                  "TCP"
                ],
                "source_addresses": [
                  "*"
                ],
                "translated_address": "10.0.2.4",
                "translated_port": "80"
              }
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.jbox-rg",
            "azurerm_resource_group.be-rg",
            "azurerm_virtual_network.be-rg",
            "azurerm_firewall.fe-rg",
            "azurerm_network_interface.be-rg",
            "azurerm_resource_group.jbox-rg",
            "azurerm_subnet.be-rg",
            "azurerm_subnet.fe-rg-01",
            "azurerm_subnet.fe-rg-02",
            "azurerm_virtual_network.fe-rg",
            "azurerm_public_ip.fe-rg",
            "azurerm_resource_group.fe-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "be-rg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6c903494-a6a9-4bb5-80ad-a6b1816c67b3/resourceGroups/Be-rg/providers/Microsoft.Network/networkInterfaces/web-nic",
            "internal_domain_name_suffix": "yilo0vbc35duxnds04p5wbg5cb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/6c903494-a6a9-4bb5-80ad-a6b1816c67b3/resourceGroups/Be-rg/providers/Microsoft.Network/virtualNetworks/web-vnet/subnets/web-subnet"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-22-17-0D",
            "name": "web-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "Be-rg",
            "virtual_machine_id": "/subscriptions/6c903494-a6a9-4bb5-80ad-a6b1816c67b3/resourceGroups/Be-rg/providers/Microsoft.Compute/virtualMachines/Web-vm01"
          },
          "dependencies": [
            "azurerm_resource_group.be-rg",
            "azurerm_subnet.be-rg",
            "azurerm_virtual_network.be-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "jbox-rg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/6c903494-a6a9-4bb5-80ad-a6b1816c67b3/resourceGroups/jbox-rg/providers/Microsoft.Network/networkInterfaces/jbox-nic",
            "internal_domain_name_suffix": "k2bows4fyitulkuujhwi5yqdyb.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/6c903494-a6a9-4bb5-80ad-a6b1816c67b3/resourceGroups/fe-rg/providers/Microsoft.Network/virtualNetworks/fe-vnet/subnets/jbox-subnet"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-2C-19-B4",
            "name": "jbox-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "jbox-rg",
            "virtual_machine_id": "/subscriptions/6c903494-a6a9-4bb5-80ad-a6b1816c67b3/resourceGroups/jbox-rg/providers/Microsoft.Compute/virtualMachines/Jbox-vm01"
          },
          "dependencies": [
            "azurerm_resource_group.jbox-rg",
            "azurerm_subnet.fe-rg-02",
            "azurerm_virtual_network.fe-rg",
            "azurerm_resource_group.fe-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "be-rg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6c903494-a6a9-4bb5-80ad-a6b1816c67b3/resourceGroups/Be-rg/providers/Microsoft.Network/networkInterfaces/web-nic|/subscriptions/6c903494-a6a9-4bb5-80ad-a6b1816c67b3/resourceGroups/Be-rg/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "network_interface_id": "/subscriptions/6c903494-a6a9-4bb5-80ad-a6b1816c67b3/resourceGroups/Be-rg/providers/Microsoft.Network/networkInterfaces/web-nic",
            "network_security_group_id": "/subscriptions/6c903494-a6a9-4bb5-80ad-a6b1816c67b3/resourceGroups/Be-rg/providers/Microsoft.Network/networkSecurityGroups/web-nsg"
          },
          "dependencies": [
            "azurerm_virtual_network.be-rg",
            "azurerm_network_interface.be-rg",
            "azurerm_network_security_group.be-rg",
            "azurerm_resource_group.be-rg",
            "azurerm_subnet.be-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "jbox-rg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6c903494-a6a9-4bb5-80ad-a6b1816c67b3/resourceGroups/jbox-rg/providers/Microsoft.Network/networkInterfaces/jbox-nic|/subscriptions/6c903494-a6a9-4bb5-80ad-a6b1816c67b3/resourceGroups/jbox-rg/providers/Microsoft.Network/networkSecurityGroups/jbox-nsg",
            "network_interface_id": "/subscriptions/6c903494-a6a9-4bb5-80ad-a6b1816c67b3/resourceGroups/jbox-rg/providers/Microsoft.Network/networkInterfaces/jbox-nic",
            "network_security_group_id": "/subscriptions/6c903494-a6a9-4bb5-80ad-a6b1816c67b3/resourceGroups/jbox-rg/providers/Microsoft.Network/networkSecurityGroups/jbox-nsg"
          },
          "dependencies": [
            "azurerm_virtual_network.fe-rg",
            "azurerm_network_interface.jbox-rg",
            "azurerm_network_security_group.jbox-rg",
            "azurerm_resource_group.fe-rg",
            "azurerm_resource_group.jbox-rg",
            "azurerm_subnet.fe-rg-02"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "be-rg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6c903494-a6a9-4bb5-80ad-a6b1816c67b3/resourceGroups/Be-rg/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "location": "westeurope",
            "name": "web-nsg",
            "resource_group_name": "Be-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.2.4/32",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "web",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.be-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "jbox-rg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/6c903494-a6a9-4bb5-80ad-a6b1816c67b3/resourceGroups/jbox-rg/providers/Microsoft.Network/networkSecurityGroups/jbox-nsg",
            "location": "westeurope",
            "name": "jbox-nsg",
            "resource_group_name": "jbox-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.1.4/32",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "rdp",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.jbox-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "be-rg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.2.4/32",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/6c903494-a6a9-4bb5-80ad-a6b1816c67b3/resourceGroups/Be-rg/providers/Microsoft.Network/networkSecurityGroups/web-nsg/securityRules/web",
            "name": "web",
            "network_security_group_name": "web-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "Be-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.be-rg",
            "azurerm_network_security_group.be-rg",
            "azurerm_resource_group.be-rg",
            "azurerm_subnet.be-rg",
            "azurerm_virtual_network.be-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "fe-rg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.2.4/32",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "3389",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/6c903494-a6a9-4bb5-80ad-a6b1816c67b3/resourceGroups/Be-rg/providers/Microsoft.Network/networkSecurityGroups/web-nsg/securityRules/rdp",
            "name": "rdp",
            "network_security_group_name": "web-nsg",
            "priority": 110,
            "protocol": "Tcp",
            "resource_group_name": "Be-rg",
            "source_address_prefix": "10.0.1.4/32",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_interface.be-rg",
            "azurerm_network_interface.jbox-rg",
            "azurerm_network_security_group.be-rg",
            "azurerm_resource_group.be-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "jbox-rg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "10.0.1.4/32",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/6c903494-a6a9-4bb5-80ad-a6b1816c67b3/resourceGroups/jbox-rg/providers/Microsoft.Network/networkSecurityGroups/jbox-nsg/securityRules/rdp",
            "name": "rdp",
            "network_security_group_name": "jbox-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "jbox-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.jbox-rg",
            "azurerm_resource_group.fe-rg",
            "azurerm_resource_group.jbox-rg",
            "azurerm_subnet.fe-rg-02",
            "azurerm_virtual_network.fe-rg",
            "azurerm_network_interface.jbox-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "fe-rg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/6c903494-a6a9-4bb5-80ad-a6b1816c67b3/resourceGroups/fe-rg/providers/Microsoft.Network/publicIPAddresses/pub-ip01",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.136.122.114",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "pub-ip01",
            "resource_group_name": "fe-rg",
            "sku": "Standard"
          },
          "dependencies": [
            "azurerm_resource_group.fe-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "be-rg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6c903494-a6a9-4bb5-80ad-a6b1816c67b3/resourceGroups/Be-rg/providers/Microsoft.Network/virtualNetworks/web-vnet/subnets/web-subnet",
            "name": "web-subnet",
            "resource_group_name": "Be-rg",
            "virtual_network_name": "web-vnet"
          },
          "dependencies": [
            "azurerm_virtual_network.be-rg",
            "azurerm_resource_group.be-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "fe-rg-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6c903494-a6a9-4bb5-80ad-a6b1816c67b3/resourceGroups/fe-rg/providers/Microsoft.Network/virtualNetworks/fe-vnet/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "resource_group_name": "fe-rg",
            "virtual_network_name": "fe-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.fe-rg",
            "azurerm_virtual_network.fe-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "fe-rg-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/6c903494-a6a9-4bb5-80ad-a6b1816c67b3/resourceGroups/fe-rg/providers/Microsoft.Network/virtualNetworks/fe-vnet/subnets/jbox-subnet",
            "name": "jbox-subnet",
            "resource_group_name": "fe-rg",
            "virtual_network_name": "fe-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.fe-rg",
            "azurerm_virtual_network.fe-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "be-rg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.2.0/23"
            ],
            "guid": "54ed16c2-ef22-4bc7-b472-d79ffb04df11",
            "id": "/subscriptions/6c903494-a6a9-4bb5-80ad-a6b1816c67b3/resourceGroups/Be-rg/providers/Microsoft.Network/virtualNetworks/web-vnet",
            "location": "westeurope",
            "name": "web-vnet",
            "resource_group_name": "Be-rg",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/6c903494-a6a9-4bb5-80ad-a6b1816c67b3/resourceGroups/Be-rg/providers/Microsoft.Network/virtualNetworks/web-vnet/subnets/web-subnet",
                "name": "web-subnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.be-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "fe-rg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/23"
            ],
            "guid": "4beb0257-c2c5-4527-aa94-49ec8fe203c1",
            "id": "/subscriptions/6c903494-a6a9-4bb5-80ad-a6b1816c67b3/resourceGroups/fe-rg/providers/Microsoft.Network/virtualNetworks/fe-vnet",
            "location": "westeurope",
            "name": "fe-vnet",
            "resource_group_name": "fe-rg",
            "subnet": [
              {
                "address_prefix": "10.0.0.0/24",
                "id": "/subscriptions/6c903494-a6a9-4bb5-80ad-a6b1816c67b3/resourceGroups/fe-rg/providers/Microsoft.Network/virtualNetworks/fe-vnet/subnets/AzureFirewallSubnet",
                "name": "AzureFirewallSubnet"
              },
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/6c903494-a6a9-4bb5-80ad-a6b1816c67b3/resourceGroups/fe-rg/providers/Microsoft.Network/virtualNetworks/fe-vnet/subnets/jbox-subnet",
                "name": "jbox-subnet"
              }
            ]
          },
          "dependencies": [
            "azurerm_resource_group.fe-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "be-fe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/6c903494-a6a9-4bb5-80ad-a6b1816c67b3/resourceGroups/Be-rg/providers/Microsoft.Network/virtualNetworks/web-vnet/virtualNetworkPeerings/be-fe",
            "name": "be-fe",
            "remote_virtual_network_id": "/subscriptions/6c903494-a6a9-4bb5-80ad-a6b1816c67b3/resourceGroups/fe-rg/providers/Microsoft.Network/virtualNetworks/fe-vnet",
            "resource_group_name": "Be-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "web-vnet"
          },
          "dependencies": [
            "azurerm_virtual_network.be-rg",
            "azurerm_virtual_network.fe-rg",
            "azurerm_resource_group.be-rg",
            "azurerm_resource_group.fe-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "fe-be",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": false,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/6c903494-a6a9-4bb5-80ad-a6b1816c67b3/resourceGroups/fe-rg/providers/Microsoft.Network/virtualNetworks/fe-vnet/virtualNetworkPeerings/fe-be",
            "name": "fe-be",
            "remote_virtual_network_id": "/subscriptions/6c903494-a6a9-4bb5-80ad-a6b1816c67b3/resourceGroups/Be-rg/providers/Microsoft.Network/virtualNetworks/web-vnet",
            "resource_group_name": "fe-rg",
            "use_remote_gateways": false,
            "virtual_network_name": "fe-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.be-rg",
            "azurerm_resource_group.fe-rg",
            "azurerm_virtual_network.be-rg",
            "azurerm_virtual_network.fe-rg"
          ]
        }
      ]
    }
  ]
}